# SteelCity

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .tools_find_duplicates.ps1  .tools_list_clis.ps1  .tools_move_doc_clis.ps1  BRIDGE_TEST.md  Documentation_Kit.txt  HANDOFF_2025-09-03.md  HANDOFF_SESSION.md  Jims Test Commands.md  Makefile  QUICK_REFERENCE.md  README.md  Shot Capture Sequence.md  TESTING_PROTOCOL.md  bridge.py  bt50_discover.py  bt50_test.py  capture_real_frames.py  config.example.yaml  config.yaml  config_bt50_only.yaml  config_bt50only.yaml  config_clean.yaml  config_working92.yaml  continuous_bridge.py  minimal_bridge.py  pyproject.toml  simple_bt50.py  temp_bridge.py  timer_log.csv
doc/: AMG_SIGNALS.md  HANDOFF.md  HANDOFF_20250901.md  HANDOFF_20250903.md  HANDOFF_20250905.md  INGEST.md  INVENTORY.json  INVENTORY.md  Impact_Diag_doc.md  Minimal_Bridge_Test.md  VENV_SETUP.md  project context.md  schema_v1.json
etc/: bridge.env.example  bridge.service  bridge.user.service  ingest.user.service
scripts/: discover_bt50.py  grep_latest.sh  install_ingest_service.sh  install_user_service.sh  reset_ble.sh  run_bridge.py  stop_bridge.sh  tail_latest.sh  timed_bridge_run.sh  timed_session_and_ingest.sh  watch_amg.sh  watch_amg_live.sh
tests/: test_amg_signals.py  test_detector.py  test_dual_file_logger.py  test_ndjson_logger.py  test_timing_correlation.py  test_wtvb_parse.py
tools/: README_TIMING_REPORT.md  __init__.py  amg_commander.bak.1756318499  amg_commander.bak.1756319631  amg_commander.bak.1756319937  amg_commander.bak.1756321207  (+60 more)
(+14 files in other folders)
